--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
-    <title>Etch-A-Sketch</title>
+    <title>test-A-Sketch</title>
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
